Fixed login button alignment

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -134,16 +134,6 @@ p {
     height: 4.5vh;
 }
 
-.navbarButtonText {
-    width: 100%;
-    margin: 0;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-
 .uploadFile {
     margin-top: 15vh;
     display: block;
